--- a/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="90" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="120" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="左上" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVb-aE-TXO">
-                        <rect key="frame" x="8" y="8" width="31" height="30"/>
+                        <rect key="frame" x="16" y="2" width="31" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4oa-pe-Ja5"/>
                         </constraints>
@@ -28,25 +28,50 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8mQ-WH-vvE">
-                        <rect key="frame" x="8" y="46" width="304" height="35"/>
+                        <rect key="frame" x="8" y="40" width="304" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="UGO-bT-PLM"/>
                         </constraints>
                     </view>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzs-rM-M3Q">
+                        <rect key="frame" x="8" y="83" width="71" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <state key="normal" title="检查结果&gt;">
+                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u80-wu-KtR">
+                        <rect key="frame" x="282" y="83" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="IKs-mZ-TOI"/>
+                            <constraint firstAttribute="width" constant="30" id="ggA-Dz-hsB"/>
+                        </constraints>
+                        <state key="normal" image="photoBtn"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="oVb-aE-TXO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="0Yf-Nt-YB9"/>
+                    <constraint firstItem="oVb-aE-TXO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="0Yf-Nt-YB9"/>
                     <constraint firstAttribute="trailing" secondItem="8mQ-WH-vvE" secondAttribute="trailing" constant="8" id="3YU-bl-sbm"/>
-                    <constraint firstItem="oVb-aE-TXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="s3U-1j-ONK"/>
+                    <constraint firstAttribute="trailing" secondItem="u80-wu-KtR" secondAttribute="trailing" constant="8" id="769-xz-yd8"/>
+                    <constraint firstItem="u80-wu-KtR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Qzs-rM-M3Q" secondAttribute="trailing" constant="10" id="QZC-LR-Rdl"/>
+                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="top" secondItem="8mQ-WH-vvE" secondAttribute="bottom" constant="8" id="bYp-zc-b6r"/>
+                    <constraint firstItem="oVb-aE-TXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="s3U-1j-ONK"/>
                     <constraint firstItem="8mQ-WH-vvE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="t0s-KQ-hWn"/>
+                    <constraint firstItem="u80-wu-KtR" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="tFI-Pf-m58"/>
+                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="vzj-sr-0ht"/>
                     <constraint firstItem="8mQ-WH-vvE" firstAttribute="top" secondItem="oVb-aE-TXO" secondAttribute="bottom" constant="8" id="xNL-rd-GJZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="checkResultBtn" destination="Qzs-rM-M3Q" id="yDn-NC-AyZ"/>
                 <outlet property="contentL" destination="oVb-aE-TXO" id="Wey-Gn-buw"/>
+                <outlet property="photoBtn" destination="u80-wu-KtR" id="9wO-g8-rae"/>
                 <outlet property="segBgView" destination="8mQ-WH-vvE" id="zlG-cp-8Z0"/>
             </connections>
-            <point key="canvasLocation" x="-102" y="-31"/>
+            <point key="canvasLocation" x="-704" y="4"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="photoBtn" width="20" height="20"/>
+    </resources>
 </document>
