--- a/AutoMall/Base.lproj/Main.storyboard
+++ b/AutoMall/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -55,12 +55,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="112" height="174"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9jZ-UH-S3r">
-                                                    <rect key="frame" x="0.0" y="0.0" width="112" height="133"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="check_default" translatesAutoresizingMaskIntoConstraints="NO" id="9jZ-UH-S3r">
+                                                    <rect key="frame" x="0.0" y="0.0" width="112" height="167"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快速保养检查" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ywp-Ou-Lhv">
-                                                    <rect key="frame" x="0.0" y="143" width="112" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="0.0" y="147" width="112" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -70,7 +70,7 @@
                                             <constraint firstAttribute="trailing" secondItem="9jZ-UH-S3r" secondAttribute="trailing" id="FAf-Q2-Ta2"/>
                                             <constraint firstAttribute="bottom" secondItem="Ywp-Ou-Lhv" secondAttribute="bottom" constant="10" id="WSk-WB-i6z"/>
                                             <constraint firstAttribute="trailing" secondItem="Ywp-Ou-Lhv" secondAttribute="trailing" id="XmA-B7-wy6"/>
-                                            <constraint firstItem="Ywp-Ou-Lhv" firstAttribute="top" secondItem="9jZ-UH-S3r" secondAttribute="bottom" constant="10" id="aQw-OI-vf5"/>
+                                            <constraint firstItem="Ywp-Ou-Lhv" firstAttribute="top" secondItem="9jZ-UH-S3r" secondAttribute="bottom" constant="-20" id="aQw-OI-vf5"/>
                                             <constraint firstItem="Ywp-Ou-Lhv" firstAttribute="leading" secondItem="7Ty-62-hd2" secondAttribute="leading" id="foH-0A-PKl"/>
                                             <constraint firstItem="9jZ-UH-S3r" firstAttribute="top" secondItem="7Ty-62-hd2" secondAttribute="top" id="jb3-u2-6MV"/>
                                             <constraint firstItem="9jZ-UH-S3r" firstAttribute="leading" secondItem="7Ty-62-hd2" secondAttribute="leading" id="pN1-GI-nH4"/>
@@ -370,6 +370,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="check_default" width="240" height="320"/>
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
     </resources>
