--- a/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="120" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="130" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="左上" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVb-aE-TXO">
@@ -34,17 +34,21 @@
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzs-rM-M3Q">
-                        <rect key="frame" x="8" y="83" width="71" height="30"/>
+                        <rect key="frame" x="8" y="83" width="200" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="StB-f3-9Zm"/>
+                            <constraint firstAttribute="height" constant="40" id="tMq-cu-Jcy"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <state key="normal" title="检查结果&gt;">
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u80-wu-KtR">
-                        <rect key="frame" x="282" y="83" width="30" height="30"/>
+                        <rect key="frame" x="272" y="83" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="IKs-mZ-TOI"/>
-                            <constraint firstAttribute="width" constant="30" id="ggA-Dz-hsB"/>
+                            <constraint firstAttribute="height" constant="40" id="IKs-mZ-TOI"/>
+                            <constraint firstAttribute="width" constant="40" id="ggA-Dz-hsB"/>
                         </constraints>
                         <state key="normal" image="photoBtn"/>
                     </button>
@@ -68,7 +72,7 @@
                 <outlet property="photoBtn" destination="u80-wu-KtR" id="9wO-g8-rae"/>
                 <outlet property="segBgView" destination="8mQ-WH-vvE" id="zlG-cp-8Z0"/>
             </connections>
-            <point key="canvasLocation" x="-704" y="4"/>
+            <point key="canvasLocation" x="-704" y="9"/>
         </tableViewCell>
     </objects>
     <resources>
