--- a/AutoMall/ViewControllers/Upkeep/AutoCheckMultiCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckMultiCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckMultiCell" rowHeight="121" id="KGk-i7-Jjw" customClass="AutoCheckMultiCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckMultiCell" rowHeight="131" id="KGk-i7-Jjw" customClass="AutoCheckMultiCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CSA-D1-ZUd">
@@ -50,17 +50,21 @@
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HxV-Rp-wNd">
-                        <rect key="frame" x="8" y="83" width="71" height="30"/>
+                        <rect key="frame" x="8" y="83" width="200" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="WEE-J2-QVN"/>
+                            <constraint firstAttribute="height" constant="40" id="qPn-l0-Qu4"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <state key="normal" title="检查结果&gt;">
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nq-xE-qpG">
-                        <rect key="frame" x="282" y="83" width="30" height="30"/>
+                        <rect key="frame" x="272" y="83" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="1Ns-FZ-4YB"/>
-                            <constraint firstAttribute="width" constant="30" id="wgK-2k-pDs"/>
+                            <constraint firstAttribute="height" constant="40" id="1Ns-FZ-4YB"/>
+                            <constraint firstAttribute="width" constant="40" id="wgK-2k-pDs"/>
                         </constraints>
                         <state key="normal" image="photoBtn"/>
                     </button>
@@ -85,7 +89,7 @@
                 <outlet property="photoBtn" destination="6nq-xE-qpG" id="1Ly-NH-KMv"/>
                 <outlet property="segBgView" destination="2iA-28-E4i" id="9xA-Um-9qx"/>
             </connections>
-            <point key="canvasLocation" x="-372" y="0.0"/>
+            <point key="canvasLocation" x="-372" y="5"/>
         </tableViewCell>
     </objects>
     <resources>
