--- a/AutoMall/ViewControllers/Mall/MailSearchVC.xib
+++ b/AutoMall/ViewControllers/Mall/MailSearchVC.xib
@@ -11,8 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MailSearchVC">
             <connections>
-                <outlet property="myCollectionView" destination="pLW-Qb-yFO" id="ZMQ-RO-c7F"/>
                 <outlet property="mySearchBar" destination="Gqi-Xz-JR8" id="tO1-2T-ou7"/>
+                <outlet property="myTableView" destination="yLe-NZ-VGp" id="WfX-uu-ij6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -29,28 +29,23 @@
                     </constraints>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pLW-Qb-yFO">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yLe-NZ-VGp">
                     <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hKN-nB-Fvc">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="P2W-it-OUR"/>
+                        <outlet property="delegate" destination="-1" id="hPO-PQ-VH1"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="pLW-Qb-yFO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ET4-BL-qbn"/>
-                <constraint firstItem="pLW-Qb-yFO" firstAttribute="top" secondItem="Gqi-Xz-JR8" secondAttribute="bottom" id="Mee-RX-JlS"/>
-                <constraint firstAttribute="bottom" secondItem="pLW-Qb-yFO" secondAttribute="bottom" id="XK5-Ez-N41"/>
-                <constraint firstAttribute="trailing" secondItem="pLW-Qb-yFO" secondAttribute="trailing" id="daX-G1-bfw"/>
                 <constraint firstAttribute="trailing" secondItem="Gqi-Xz-JR8" secondAttribute="trailing" id="j92-ZZ-YQh"/>
                 <constraint firstItem="Gqi-Xz-JR8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="oSp-sr-ydF"/>
                 <constraint firstItem="Gqi-Xz-JR8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="rfv-9X-f8r"/>
             </constraints>
-            <point key="canvasLocation" x="-98" y="42"/>
+            <point key="canvasLocation" x="-487" y="-2"/>
         </view>
     </objects>
 </document>
